[package]
name = "onboarding-bridge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22.0.1"

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }

[features]
testutils = ["soroban-sdk/testutils"]
